js/src/tests/test262/language/expressions/dynamic-import/syntax/valid/nested-with-expression-import-defer-script-code-valid.js
with
(
import
.
defer
(
'
.
/
empty_FIXTURE
.
js
'
)
)
{
assert
.
sameValue
(
then
Promise
.
prototype
.
then
)
;
assert
.
sameValue
(
constructor
Promise
)
;
}
reportCompare
(
0
0
)
;
