js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-with-import-defer-no-new-call-expression.js
DONOTEVALUATE
(
)
;
with
(
{
}
)
{
new
import
.
defer
(
'
.
/
empty_FIXTURE
.
js
'
)
;
}
